--- a/RSS-CSS-Selectors/src/components/footer/_footer.scss
+++ b/RSS-CSS-Selectors/src/components/footer/_footer.scss
@@ -1,3 +1,6 @@
+.footer {
+  flex: 0 0 auto;
+}
 .footer-list {
   display: flex;
   justify-content: center;
